tests/snapshots/directional/rtl-horizontal-tb-block-boxes.dumplayout.html.snap
---
source: tests/lib.rs
expression: dump_layout_cmd.stdout()
input_file: tests/websrc/directional/rtl-horizontal-tb-block-boxes.dumplayout.html
---
HTML BlockContainer at (0, 0) size 1920x706
  BODY BlockContainer at (8, 8) size 1904x690
    DIV BlockContainer at (1597, 23) size 300x200
    DIV BlockContainer at (1597, 253) size 300x200
    DIV BlockContainer at (1597, 483) size 300x200

