tests/snapshots/directional/rtl-vertical-lr-block-boxes.dumplayout.html.snap
---
source: tests/lib.rs
expression: dump_layout_cmd.stdout()
input_file: tests/websrc/directional/rtl-vertical-lr-block-boxes.dumplayout.html
---
HTML BlockContainer at (0, 0) size 1006x1080
  BODY BlockContainer at (8, 8) size 990x1064
    DIV BlockContainer at (23, 857) size 300x200
    DIV BlockContainer at (353, 857) size 300x200
    DIV BlockContainer at (683, 857) size 300x200

